# life-management-app

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  run.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  timezone.py
app/models/: __init__.py  daily_memo.py  daily_reflection.py  journey.py  record.py  todo.py
app/routers/: daily.py  journeys.py  reflections.py
app/schemas/: journey.py  llm_blog.py
app/services/: daily_memo_service.py  daily_reflection_service.py  daily_todo_service.py  journey_service.py  llm_blog_service.py
app/static/css/: style.css
app/static/js/: main.js  modal.js
app/templates/: base.html  daily_todos.html  journey_detail.html  project_management.html  reflection_history.html  weekly_planning.html
app/templates/errors/: 404.html  500.html
app/templates/forms/: journey_edit_form.html  journey_new_form.html
docs/: API.md  PROJECT_STATUS.md  database-migrations.md
docs/retrospectives/: 2025-10-17-past-date-reflection-writing-feature.md  2025-10-22-daily-reflection-edit-feature.md  README.md
docs/visualization/: PRD.md  TODO.md
migrations/: env.py
migrations/versions/: 20251011_1202_8aaa01a42a55_initial_schema_creation.py  20251011_1637_22d22edc25e9_add_dailymemo_model_for_daily_memo_.py  20251013_1602_1da32c92ae33_rename_milestones_to_journeys.py  20251014_1754_4d731929c2b0_update_dailyreflection_created_at_field.py
scripts/: __init__.py  db.py  run_dev.bat  run_dev.ps1  run_dev.sh  run_main.bat  run_main.ps1  run_main.sh
tests/: conftest.py  test-services.bat  test-services.ps1  test-services.sh
tests/api/: test_daily_api.py  test_daily_progress_api.py  test_journeys_api.py  test_llm_blog_api.py  test_reflections_api.py  test_timezone_api_responses.py
tests/core/: __init__.py  test_timezone.py
tests/e2e/: __init__.py  conftest.py  test_basic_navigation.py  test_journey_workflow.py  test_reflection_system.py  test_todo_workflow.py  test_todo_workflow_simple.py
tests/models/: test_daily_memo.py  test_daily_reflection_llm.py  test_journey.py  test_todo.py
tests/routers/: test_daily_memo_endpoints.py
tests/services/: test_auto_rollover_system.py  test_daily_memo_service.py  test_daily_reflection_service.py  test_daily_todo_postpone.py  test_daily_todo_remaining_count.py  test_daily_todo_service.py  test_journey_service.py  test_llm_blog_service.py  test_today_progress_accuracy.py
(+2 files in other folders)
